--- a/diablecare/package.json
+++ b/diablecare/package.json
@@ -13,6 +13,7 @@
     "@ant-design/icons": "^5.5.2",
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
+    "antd": "^5.23.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^15.4.0",
