--- a/BE/EXE201/src/main/resources/application.properties
+++ b/BE/EXE201/src/main/resources/application.properties
@@ -3,3 +3,7 @@
 #spring.datasource.password=your_password
 #spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+jwt.secret=datcuti6mui123456789000000000000000000
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.api-docs.path=/api-docs
+
