--- a/BE/EXE201/src/main/resources/application.properties
+++ b/BE/EXE201/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-#spring.datasource.url=jdbc:mysql://localhost:3306/your_database_name
-#spring.datasource.username=your_username
-#spring.datasource.password=your_password
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.datasource.url=jdbc:mysql://localhost:3306/diabeteshealthapp?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=12345
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
 jwt.secret=datcuti6mui123456789000000000000000000
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.api-docs.path=/api-docs
-
