--- a/BE/EXE201/src/main/resources/application.properties
+++ b/BE/EXE201/src/main/resources/application.properties
@@ -1,9 +1,36 @@
+# C?u hình datasource (không c?n thay ??i n?u MySQL ch?y c?c b?)
 spring.datasource.url=jdbc:mysql://localhost:3306/diabeteshealthapp?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=12345
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
+# C?u hình JWT
 jwt.secret=datcuti6mui123456789000000000000000000
+
+# C?u hình Swagger
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.api-docs.path=/api-docs
+
+# C?u hình server v?i domain Ngrok
+server.port=8080
+server.forward-headers-strategy=native
+server.servlet.context-path=/
+
+
+
+
+
+
+
+
+
+#spring.datasource.url=jdbc:mysql://localhost:3306/diabeteshealthapp?useSSL=false&serverTimezone=UTC
+#spring.datasource.username=root
+#spring.datasource.password=12345
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+#
+#jwt.secret=datcuti6mui123456789000000000000000000
+#springdoc.swagger-ui.path=/swagger-ui.html
+#springdoc.api-docs.path=/api-docs
