--- a/EXE201/EXE201/FinalBE/package.json
+++ b/EXE201/EXE201/FinalBE/package.json
@@ -5,7 +5,6 @@
   "scripts": {
     "dev": "nodemon server.js",
     "start": "node server.js",
-
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -24,16 +23,26 @@
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
-    "mongoose": "^8.10.1",
+    "mongoose": "^8.12.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodejs-register-api": "file:",
     "nodemailer": "^6.10.0",
     "qs": "^6.14.0",
     "request": "^2.88.2",
     "serve-favicon": "^2.5.0",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "webidl2js": "^18.0.0",
+    "whatwg-url": "^14.1.1"
   },
   "devDependencies": {
-    "nodemon": "^3.1.9"
+    "@types/react": "^19.0.10",
+    "nodemon": "^3.1.9",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "typescript": "^5.8.2"
+  },
+  "engines": {
+    "node": "22.x"
   }
 }
