--- a/EXE201/EXE201/EXE201/EXE201/FE/package.json
+++ b/EXE201/EXE201/EXE201/EXE201/FE/package.json
@@ -13,6 +13,7 @@
     "@ant-design/icons": "^5.5.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@react-google-maps/api": "^2.20.5",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "@types/axios": "^0.14.4",
     "@types/node": "^22.10.5",
     "@types/react-router-dom": "^5.3.3",
