--- a/EXE201/EXE201/EXE201/EXE201/FinalBE/package.json
+++ b/EXE201/EXE201/EXE201/EXE201/FinalBE/package.json
@@ -6,7 +6,9 @@
     "dev": "nodemon server.js",
     "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc" 
+    "build": "tsc", 
+    "predeploy": "npm run build",
+    "deploy": "vercel --prod"
   },
   "keywords": [],
   "author": "",
