--- a/EXE201/EXE201/EXE201/EXE201/FinalBE/Vercel/vercel.json
+++ b/EXE201/EXE201/EXE201/EXE201/FinalBE/Vercel/vercel.json
@@ -1,11 +1,20 @@
 {
-    "version": 2,
-    "builds": [
-      { "src": "server.js", "use": "@vercel/node" },
-      { "src": "FE/src/*", "use": "@vercel/static" }
-    ],
-    "routes": [
-      { "src": "^/api/(.)", "dest": "server.js" },
-      { "src": "^(?!/api/).*", "dest": "/FE/dist/index.html" }
-    ]
-  }
+  "version": 2,
+  "builds": [
+    {
+      "src": "server.js",
+      "use": "@vercel/node"
+    },
+    {
+      "src": "FE/package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "FE/dist"
+      }
+    }
+  ],
+  "routes": [
+    { "src": "^/api/(.*)", "dest": "server.js" },
+    { "src": "^(?!/api).*", "dest": "/FE/dist/index.html" }
+  ]
+}
