--- a/EXE201/EXE201/EXE201/EXE201/FE/package.json
+++ b/EXE201/EXE201/EXE201/EXE201/FE/package.json
@@ -8,10 +8,12 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
-    
   },
   "dependencies": {
     "@ant-design/icons": "^5.5.2",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^7.0.1",
     "@radix-ui/react-slot": "^1.1.2",
     "@react-google-maps/api": "^2.20.5",
     "@tailwindcss/line-clamp": "^0.4.4",
