--- a/EXE201/EXE201/EXE201/EXE201/FinalBE/package.json
+++ b/EXE201/EXE201/EXE201/EXE201/FinalBE/package.json
@@ -6,7 +6,7 @@
     "dev": "nodemon server.js",
     "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc", 
+    "build": "tsc",
     "predeploy": "npm run build",
     "deploy": "vercel --prod"
   },
@@ -15,6 +15,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@mui/material": "^7.0.1",
     "@payos/node": "^1.0.10",
     "axios": "^1.8.4",
     "bcryptjs": "^3.0.0",
