--- a/EXE201/EXE201/EXE201/EXE201/FinalBE/Vercel/vercel.json
+++ b/EXE201/EXE201/EXE201/EXE201/FinalBE/Vercel/vercel.json
@@ -1,20 +1,11 @@
 {
   "version": 2,
   "builds": [
-    {
-      "src": "server.js",
-      "use": "@vercel/node"
-    },
-    {
-      "src": "FE/package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "FE/dist"
-      }
-    }
+    { "src": "server.js", "use": "@vercel/node" },
+    { "src": "FE/dist/**", "use": "@vercel/static" }
   ],
   "routes": [
     { "src": "^/api/(.*)", "dest": "server.js" },
-    { "src": "^(?!/api).*", "dest": "/FE/dist/index.html" }
+    { "src": "^(?!/api/).*", "dest": "/FE/dist/index.html" }
   ]
 }
