--- a/EXE201/EXE201/EXE201/EXE201/EXE201/FE/package.json
+++ b/EXE201/EXE201/EXE201/EXE201/EXE201/FE/package.json
@@ -39,6 +39,7 @@
     "react-transition-group": "^4.4.5",
     "recharts": "^2.15.2",
     "slick-carousel": "^1.8.1",
+    "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.0.2"
   },
   "devDependencies": {
